--- a/app/partials/app.html
+++ b/app/partials/app.html
@@ -1,8 +1,7 @@
-<fa-app class="full-screen" >
-<fa-surface fa-background-color="'#FFF'"></fa-surface>
-<fa-header-footer-layout>
-<fa-surface fa-size="[undefined, 100]" fa-background-color="'#F00'">Header</fa-surface>
-<fa-surface fa-size="[undefined, undefined]" fa-background-color="'#CCC'">Content</fa-surface>
-<fa-surface fa-size="[undefined, 50]" fa-background-color="'#00F'">Footer</fa-surface>
-</fa-header-footer-layout>
+<fa-app class="full-screen">
+<fa-grid-layout fa-options="footerGridOptions">
+<fa-modifier fa-origin="[0,1]" fa-align="[0,1]" ng-repeat="nav in navs" fa-size="nav.size">
+<fa-surface class="footer_nav"><div class="{{nav.class}}"></div></fa-surface>
+</fa-modifier>
+</fa-grid-layout>
 </fa-app>
