Combine Go and Angular-Famous to one app

--- a/app/partials/app.html
+++ b/app/partials/app.html
@@ -19,7 +19,7 @@
 <fa-modifier id="{{'listItem' + $index}}" fa-translate="[0,50,0]" fa-align="[0,0]" fa-size="[undefined,250]">
 <!-- All events on fa-surfaces (click, mousewheel) are piped to $scope.eventHandler -->
 <fa-surface fa-pipe-to="eventHandler" fa-background-color="'red'">
-{{item.content}}
+{{item.title}}
 </fa-surface>
 </fa-modifier>
 </fa-view>
